--- a/configs/testgpus.config
+++ b/configs/testgpus.config
@@ -1,10 +1,10 @@
 flag:		testdpBenchmark		#Flag of current experiment
-tools:		mxnet	#Tools to benchmark
+tools:		torch	#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <learning rate>
 {
-		fc;		fcn5;		0,1,2,3;	1;		1024;		2;		60000;		0.05
-		cnn;		alexnet;	0,1,2,3;	1;		256;	   	2;		50000;		0.01
-		cnn;		resnet;		0,1,2,3;	1;		128;		2;		50000;		0.01
+		fc;		fcn5;		0,1,2,3;	4;		1024;		2;		60000;		0.05
+		cnn;		alexnet;	0,1,2,3;	4;		256;	   	2;		50000;		0.01
+		cnn;		resnet;		0,1,2,3;	4;		128;		2;		50000;		0.01
 }
 host_file:	None		#Path to host file or None
 cpu_name:	E5-2630v3	#CPU model
