all tests for tensorflow passed

--- a/configs/testgpus.config
+++ b/configs/testgpus.config
@@ -1,5 +1,5 @@
 flag:		testdpBenchmark		#Flag of current experiment
-tools:		caffe	#Tools to benchmark
+tools:		tensorflow	#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <learning rate>
 {
 		fc;		fcn5;		0,1,2,3;	4;		1024;		2;		60000;		0.05
