--- a/configs/test.config
+++ b/configs/test.config
@@ -1,5 +1,5 @@
 flag:		testdpBenchmark		#Flag of current experiment
-tools:		cntk			#Tools to benchmark
+tools:		tensorflow			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
 		fc;		fcn5;		0;		1;		4096;		2;		60000;		0.05
