--- a/configs/gpu10-caffe.config
+++ b/configs/gpu10-caffe.config
@@ -1,4 +1,4 @@
-flag:		testdpBenchmark		#Flag of current experiment
+flag:		sgbenchmark6		#Flag of current experiment
 tools:		caffe			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
