--- a/configs/gpu10-mxnet.config
+++ b/configs/gpu10-mxnet.config
@@ -1,27 +1,27 @@
-flag:		testdpBenchmark		#Flag of current experiment
+flag:		sgbenchmark6		#Flag of current experiment
 tools:		mxnet			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
-		fc;		fcn5;		1;		1;		4096;		40;		60000;		0.05
-		fc;		fcn5;		1;		1;		2048;		40;		60000;		0.05
-		fc;		fcn5;		1;		1;		1024;		40;		60000;		0.05
-		fc;		fcn5;		1;		1;		512;	   	40;		60000;		0.05
-		fc;		fcn5;		1;		1;		342;	   	40;		60000;		0.05
-		cnn;		alexnet;	1;		1;		2048;		40;		50000;		0.01
-		cnn;		alexnet;	1;		1;		1024;		40;		50000;		0.01
-		cnn;		alexnet;	1;		1;		512;  	 	40;		50000;		0.01
-		cnn;		alexnet;	1;		1;		256;	   	40;		50000;		0.01
-		cnn;		alexnet;	1;		1;		128;	   	40;		50000;		0.01
-		cnn;		alexnet;	1;		1;		86;   		40;		50000;		0.01
-		cnn;		resnet;		1;		1;		128;		40;		50000;		0.01
-		cnn;		resnet;		1;		1;		64;		40;		50000;		0.01
-		cnn;		resnet;		1;		1;		32;		40;		50000;		0.01
-		cnn;		resnet;		1;		1;		16;		40;		50000;		0.01
-		cnn;		resnet;		1;		1;		11;		40;		50000;		0.01
-		rnn;		lstm;		1;		1;		1024;		20;		-1;		0.1
-		rnn;		lstm;		1;		1;		512;   		20;		-1;		0.1
-		rnn;		lstm;		1;		1;		256;   		20;		-1;		0.1
-		rnn;		lstm;		1;		1;		128;   		20;		-1;		0.1
+		fc;		fcn5;		3;		1;		4096;		40;		60000;		0.05
+		fc;		fcn5;		3;		1;		2048;		40;		60000;		0.05
+		fc;		fcn5;		3;		1;		1024;		40;		60000;		0.05
+		fc;		fcn5;		3;		1;		512;	   	40;		60000;		0.05
+		fc;		fcn5;		3;		1;		342;	   	40;		60000;		0.05
+		cnn;		alexnet;	3;		1;		2048;		40;		50000;		0.01
+		cnn;		alexnet;	3;		1;		1024;		40;		50000;		0.01
+		cnn;		alexnet;	3;		1;		512;  	 	40;		50000;		0.01
+		cnn;		alexnet;	3;		1;		256;	   	40;		50000;		0.01
+		cnn;		alexnet;	3;		1;		128;	   	40;		50000;		0.01
+		cnn;		alexnet;	3;		1;		86;   		40;		50000;		0.01
+		cnn;		resnet;		3;		1;		128;		40;		50000;		0.01
+		cnn;		resnet;		3;		1;		64;		40;		50000;		0.01
+		cnn;		resnet;		3;		1;		32;		40;		50000;		0.01
+		cnn;		resnet;		3;		1;		16;		40;		50000;		0.01
+		cnn;		resnet;		3;		1;		11;		40;		50000;		0.01
+		rnn;		lstm;		3;		1;		1024;		20;		-1;		0.1
+		rnn;		lstm;		3;		1;		512;   		20;		-1;		0.1
+		rnn;		lstm;		3;		1;		256;   		20;		-1;		0.1
+		rnn;		lstm;		3;		1;		128;   		20;		-1;		0.1
 }
 host_file:	None		#Path to host file or None
 cpu_name:	E5-2630v3	#CPU model
