--- a/configs/gpu1080.config
+++ b/configs/gpu1080.config
@@ -1,12 +1,12 @@
 flag:		sgbenchmark6		#Flag of current experiment
-tools:		mxnet			#Tools to benchmark
+tools:		tensorflow			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
-		fc;		    fcn5;		0;		1;		4096;		40;		60000;		0.05
-		fc;		    fcn5;		0;		1;		2048;		40;		60000;		0.05
-		fc;		    fcn5;		0;		1;		1024;		40;		60000;		0.05
-		fc;		    fcn5;		0;		1;		512;	   	40;		60000;		0.05
-		fc;		    fcn5;		0;		1;		342;	   	40;		60000;		0.05
+#		fc;		    fcn5;		0;		1;		4096;		40;		60000;		0.05
+#		fc;		    fcn5;		0;		1;		2048;		40;		60000;		0.05
+#		fc;		    fcn5;		0;		1;		1024;		40;		60000;		0.05
+#		fc;		    fcn5;		0;		1;		512;	   	40;		60000;		0.05
+#		fc;		    fcn5;		0;		1;		342;	   	40;		60000;		0.05
 		cnn;		alexnet;	0;		1;		2048;		40;		50000;		0.01
 		cnn;		alexnet;	0;		1;		1024;		40;		50000;		0.01
 		cnn;		alexnet;	0;		1;		512;  	 	40;		50000;		0.01
