--- a/configs/gpu980.config
+++ b/configs/gpu980.config
@@ -1,5 +1,5 @@
 flag:		sgbenchmark6		#Flag of current experiment
-tools:		mxnet			#Tools to benchmark
+tools:		tensorflow			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
 		fc;		    fcn5;		1;		1;		4096;		40;		60000;		0.05
@@ -13,18 +13,18 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 		cnn;		alexnet;	1;		1;		256;	   	40;		50000;		0.01
 		cnn;		alexnet;	1;		1;		128;	   	40;		50000;		0.01
 		cnn;		alexnet;	1;		1;		86;   		40;		50000;		0.01
+		cnn;		resnet;		1;		1;		128;		40;		50000;		0.01
+		cnn;		resnet;		1;		1;		64;		    40;		50000;		0.01
+		cnn;		resnet;		1;		1;		32;		    40;		50000;		0.01
+		cnn;		resnet;		1;		1;		16;		    40;		50000;		0.01
+		cnn;		resnet;		1;		1;		11;		    40;		50000;		0.01
 		rnn;		lstm;		1;		1;		1024;		20;		-1;	    	0.1
 		rnn;		lstm;		1;		1;		512;   		20;		-1;	    	0.1
 		rnn;		lstm;		1;		1;		256;   		20;		-1;	    	0.1
 		rnn;		lstm;		1;		1;		128;   		20;		-1;	    	0.1
-		cnn;		resnet;		1;		1;		32;		    40;		50000;		0.01
-		cnn;		resnet;		1;		1;		16;		    40;		50000;		0.01
-		cnn;		resnet;		1;		1;		11;		    40;		50000;		0.01
-		cnn;		resnet;		1;		1;		128;		40;		50000;		0.01
-		cnn;		resnet;		1;		1;		64;		    40;		50000;		0.01
 }
 host_file:	None		#Path to host file or None
-cpu_name:	i7-3820	    #CPU model
+cpu_name:	i7-3820	#CPU model
 device_name:	GTX980		#GPU model
 cuda:		8.0		#CUDA version
 cudnn:		5.1		#CUDNN version
