revise for supporting cpu

--- a/configs/tensorflow.config
+++ b/configs/tensorflow.config
@@ -13,6 +13,7 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 host_file:	None		#Path to host file or None
 cpu_name:	E5-2630v3	#CPU model
 device_name:	K80		#GPU model
+cpu_count:	1		#CPU count for cpu parallel
 cuda:		8.0		#CUDA version
 cudnn:		5.1		#CUDNN version
 cuda_driver:	367.48		#CUDA driver version
