--- a/configs/synbm2cpu8.config
+++ b/configs/synbm2cpu8.config
@@ -1,11 +1,11 @@
 flag:		syntheticSgbenchmark2 #Flag of current experiment
-tools:		caffe,cntk,tensorflow,torch			#Tools to benchmark
+tools:		torch			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <learning rate>
 {
 #		fc;		fcn5;		-1;	1;		1024;		4;		60000;		0.05
 #		cnn;		alexnet;	-1;		1;		1024;		2;		50000;		0.01
 #		cnn;		resnet;		-1;		1;		128;		2;		50000;		0.01
-		rnn;		lstm;		-1;		1;		128;		2;		50000;		0.1
+		rnn;		lstm;		-1;		1;		128;		2;		2048;		0.1
 }
 host_file:	None		#Path to host file or None
 cpu_name:	E5-2630v3	#CPU model
