revise caffe log extraction for cpu

--- a/configs/bm2cpu1.config
+++ b/configs/bm2cpu1.config
@@ -1,5 +1,5 @@
 flag:		sgbenchmark6 #Flag of current experiment
-tools:		caffe,cntk,mxnet,tensorflow,torch			#Tools to benchmark
+tools:		caffe,torch			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <learning rate>
 {
 		fc;		fcn5;		-1;	1;		1024;		4;		60000;		0.05
