--- a/configs/bm2cpu16.config
+++ b/configs/bm2cpu16.config
@@ -1,8 +1,8 @@
 flag:		sgbenchmark6 #Flag of current experiment
-tools:		caffe,torch			#Tools to benchmark
+tools:		torch			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <learning rate>
 {
-		fc;		fcn5;		-1;	1;		1024;		4;		60000;		0.05
+#		fc;		fcn5;		-1;		1;		1024;		4;		60000;		0.05
 		cnn;		alexnet;	-1;		1;		1024;		2;		50000;		0.01
 		cnn;		resnet;		-1;		1;		128;		2;		50000;		0.01
 #		rnn;		lstm;		-1;		1;		128;		2;		2048;		0.1
