--- a/configs/mxnetmbm6.config
+++ b/configs/mxnetmbm6.config
@@ -4,10 +4,10 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 {
 		fc;		fcn5;		0,1;		2;		2048;		40;		60000;		0.05
 		fc;		fcn5;		0,1,2,3;		4;		1024;		40;		60000;		0.05
-		cnn;		alexnet;	0,1;		2;		512;  	 	40;		50000;		0.01
-		cnn;		alexnet;	0,1,2,3;		4;		256;	   	40;		50000;		0.01
-		cnn;		resnet;		0,1;		2;		64;		40;		50000;		0.01
-		cnn;		resnet;		0,1,2,3;		1;		32;		40;		50000;		0.01
+#		cnn;		alexnet;	0,1;		2;		512;  	 	40;		50000;		0.01
+#		cnn;		alexnet;	0,1,2,3;		4;		256;	   	40;		50000;		0.01
+#		cnn;		resnet;		0,1;		2;		64;		40;		50000;		0.01
+#		cnn;		resnet;		0,1,2,3;		1;		32;		40;		50000;		0.01
 }
 host_file:	None		#Path to host file or None
 cpu_name:	E5-2630v4	#CPU model
