--- a/configs/mxnet2nodes.config
+++ b/configs/mxnet2nodes.config
@@ -2,9 +2,9 @@ flag:		sgbenchmark6		#Flag of current experiment
 tools:		mxnet			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
-		fc;		fcn5;		0,1,2,3;	8;		4096;		40;		60000;		0.05
-		cnn;		alexnet;	0,1,2,3;	8;		1024;		40;		50000;		0.01
-		cnn;		resnet;		0,1,2,3;	8;		128;		40;		50000;		0.01
+#		fc;		fcn5;		0,1,2,3;	8;		512;		40;		60000;		0.05
+#		cnn;		alexnet;	0,1,2,3;	8;		128;		40;		50000;		0.01
+		cnn;		resnet;		0,1,2,3;	8;		16;		40;		50000;		0.01
 }
 host_file:	/home/comp/pengfeixu/dpBenchmark/tools/mxnet/hosts2		#Path to host file or None
 cpu_name:	E5-2630v4	#CPU model
