--- a/configs/cntkmnbm6.config
+++ b/configs/cntkmnbm6.config
@@ -4,13 +4,13 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 {
 #		fc;		fcn5;		0,1,2,3,4,5,6,7;		8;		512;		40;		60000;		0.05
 #		fc;		fcn5;		0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		256;		40;		60000;		0.05
-		fc;		fcn5;		0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		128;		40;		60000;		0.05
-#		cnn;		alexnet;	0,1,2,3,5,6,7;		8;		128;	   	40;		50000;		0.01
+#		fc;		fcn5;		0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		128;		40;		60000;		0.05
+		cnn;		alexnet;	0,1,2,3,5,6,7;		8;		128;	   	40;		50000;		0.01
 		cnn;		alexnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		64;	   	40;		50000;		0.01
-		cnn;		alexnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		32;	   	40;		50000;		0.01
-		cnn;		resnet;	0,1,2,3,5,6,7;		8;		16;	   	40;		50000;		0.01
-		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		8;	   	40;		50000;		0.01
-		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		4;	   	40;		50000;		0.01
+#		cnn;		alexnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		32;	   	40;		50000;		0.01
+#		cnn;		resnet;	0,1,2,3,5,6,7;		8;		16;	   	40;		50000;		0.01
+#		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		8;	   	40;		50000;		0.01
+#		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		4;	   	40;		50000;		0.01
 #		cnn;		resnet;		0,1;		2;		64;		40;		50000;		0.01
 #		cnn;		resnet;		0,1,2,3;		4;		32;		40;		50000;		0.01
 }
