--- a/configs/cntkmnbm7.config
+++ b/configs/cntkmnbm7.config
@@ -2,18 +2,18 @@ flag:		mgbenchmark7		#Flag of current experiment. Total batch size: FCN5: 8192; 
 tools:		cntk			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
-		fc;		fcn5;		0,1,2,3;		4;		2048;		60;		60000;		0.05
-		fc;		fcn5;		0,1,2,3,4,5,6,7;		8;		1024;		60;		60000;		0.05
-		fc;		fcn5;		0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		512;		60;		60000;		0.05
+#		fc;		fcn5;		0,1,2,3;		4;		2048;		60;		60000;		0.05
+#		fc;		fcn5;		0,1,2,3,4,5,6,7;		8;		1024;		60;		60000;		0.05
+#		fc;		fcn5;		0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		512;		60;		60000;		0.05
 		fc;		fcn5;		0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		256;		60;		60000;		0.05
-		cnn;		alexnet;	0,1,2,3;		4;		512;	   	60;		50000;		0.01
-		cnn;		alexnet;	0,1,2,3,4,5,6,7;		8;		256;	   	60;		50000;		0.01
-		cnn;		alexnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		128;	   	60;		50000;		0.01
+#		cnn;		alexnet;	0,1,2,3;		4;		512;	   	60;		50000;		0.01
+#		cnn;		alexnet;	0,1,2,3,4,5,6,7;		8;		256;	   	60;		50000;		0.01
+#		cnn;		alexnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		128;	   	60;		50000;		0.01
 		cnn;		alexnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		64;	   	60;		50000;		0.01
-		cnn;		resnet;		0,1,2,3;		4;		64;		60;		50000;		0.01
-		cnn;		resnet;	0,1,2,3,5,6,7;		8;		32;	   	60;		50000;		0.01
-		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		16;	   	60;		50000;		0.01
-		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		16;	   	8;		50000;		0.01
+#		cnn;		resnet;		0,1,2,3;		4;		64;		60;		50000;		0.01
+#		cnn;		resnet;	0,1,2,3,5,6,7;		8;		32;	   	60;		50000;		0.01
+#		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15;		16;		16;	   	60;		50000;		0.01
+		cnn;		resnet;	0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31;		32;		8;	   	60;		50000;		0.01
 }
 host_file:	None		#Path to host file or None
 cpu_name:	E5-2630v4	#CPU model
