--- a/configs/tensorflowmbm6.config
+++ b/configs/tensorflowmbm6.config
@@ -6,7 +6,7 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 #		fc;		fcn5;		0,1,2,3;		4;		1024;		40;		60000;		0.05
 #		cnn;		alexnet;	0,1;		2;		512;  	 	40;		50000;		0.01
 #		cnn;		alexnet;	0,1,2,3;		4;		256;	   	40;		50000;		0.01
-#		cnn;		resnet;		0,1;		2;		64;		40;		50000;		0.01
+		cnn;		resnet;		0,1;		2;		64;		40;		50000;		0.01
 		cnn;		resnet;		0,1,2,3;		4;		32;		40;		50000;		0.01
 }
 host_file:	None		#Path to host file or None
