revise the setting of number of thread by using MKL

--- a/configs/bm2cpu16.config
+++ b/configs/bm2cpu16.config
@@ -1,19 +1,15 @@
 flag:		sgbenchmark6 #Flag of current experiment
-tools:		torch			#Tools to benchmark
+tools:		caffe,cntk,mxnet,tensorflow,torch			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <learning rate>
 {
-<<<<<<< HEAD
-#		fc;		fcn5;		-1;		1;		1024;		4;		60000;		0.05
-=======
-#		fc;		fcn5;		-1;	1;		1024;		4;		60000;		0.05
->>>>>>> b259c6d55c4beb261f3e7634d50cbb1acdbd4031
+		fc;		fcn5;		-1;	1;		1024;		4;		60000;		0.05
 		cnn;		alexnet;	-1;		1;		1024;		2;		50000;		0.01
 		cnn;		resnet;		-1;		1;		128;		2;		50000;		0.01
-#		rnn;		lstm;		-1;		1;		128;		2;		2048;		0.1
+		rnn;		lstm;		-1;		1;		128;		2;		2048;		0.1
 }
 host_file:	None		#Path to host file or None
-cpu_name:	E5-2630v3	#CPU model
-device_name:	E5-2630v3		#GPU model
+cpu_name:	E5-2630v4	#CPU model
+device_name:	E5-2630v4		#GPU model
 cpu_count:	16		#CPU count for cpu parallel
 cuda:		8.0		#CUDA version
 cudnn:		5.1		#CUDNN version
