--- a/configs/cntkbm6.config
+++ b/configs/cntkbm6.config
@@ -15,8 +15,8 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 #		cnn;		alexnet;	1;		1;		86;   		40;		50000;		0.01
 		cnn;		resnet;		2;		1;		128;		40;		50000;		0.01
 		cnn;		resnet;		2;		1;		64;		40;		50000;		0.01
-		cnn;		resnet;		2;		1;		32;		40;		50000;		0.01
-		cnn;		resnet;		2;		1;		16;		40;		50000;		0.01
+#		cnn;		resnet;		2;		1;		32;		40;		50000;		0.01
+#		cnn;		resnet;		2;		1;		16;		40;		50000;		0.01
 		cnn;		resnet;		2;		1;		11;		40;		50000;		0.01
 #		rnn;		lstm;		1;		1;		1024;		20;		-1;		0.1
 #		rnn;		lstm;		1;		1;		512;   		20;		-1;		0.1
