--- a/configs/tensorflowbm6.config
+++ b/configs/tensorflowbm6.config
@@ -7,12 +7,12 @@ experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch
 #		fc;		fcn5;		1;		1;		1024;		40;		60000;		0.05
 #		fc;		fcn5;		1;		1;		512;	   	40;		60000;		0.05
 #		fc;		fcn5;		1;		1;		342;	   	40;		60000;		0.05
-#		cnn;		alexnet;	1;		1;		2048;		40;		50000;		0.01
+		cnn;		alexnet;	1;		1;		2048;		40;		50000;		0.01
 		cnn;		alexnet;	1;		1;		1024;		40;		50000;		0.01
-#		cnn;		alexnet;	1;		1;		512;  	 	40;		50000;		0.01
-#		cnn;		alexnet;	1;		1;		256;	   	40;		50000;		0.01
-#		cnn;		alexnet;	1;		1;		128;	   	40;		50000;		0.01
-#		cnn;		alexnet;	1;		1;		86;   		40;		50000;		0.01
+		cnn;		alexnet;	1;		1;		512;  	 	40;		50000;		0.01
+		cnn;		alexnet;	1;		1;		256;	   	40;		50000;		0.01
+		cnn;		alexnet;	1;		1;		128;	   	40;		50000;		0.01
+		cnn;		alexnet;	1;		1;		86;   		40;		50000;		0.01
 #		cnn;		resnet;		1;		1;		128;		40;		50000;		0.01
 #		cnn;		resnet;		1;		1;		64;		40;		50000;		0.01
 #		cnn;		resnet;		1;		1;		32;		40;		50000;		0.01
