add collect power script

--- a/configs/v8withinspur/titanx_pascal.config
+++ b/configs/v8withinspur/titanx_pascal.config
@@ -1,6 +1,6 @@
 flag:		sgbenchmark6v8inspur		#Flag of current experiment
-tools:		caffe,cntk,mxnet,torch,tensorflow			#Tools to benchmark
-#tools:		mxnet			#Tools to benchmark
+#tools:		caffe,cntk,mxnet,torch,tensorflow			#Tools to benchmark
+tools:		tensorflow			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <gpu count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
 		fc;		    fcn5;		1;		1;		4096;		40;		60000;		0.05
