--- a/configs/test.config
+++ b/configs/test.config
@@ -1,5 +1,5 @@
 flag:		testdpBenchmark		#Flag of current experiment
-tools:		mxnet			#Tools to benchmark
+tools:		cntk			#Tools to benchmark
 experiments: #<network type>; <network name>;  <device id>; <device count>;  <batch size>;  <number of epochs>;  <epoch size>; <Learning rate>
 {
 		fc;		fcn5;		0;		1;		4096;		2;		60000;		0.05
@@ -8,19 +8,19 @@ experiments: #<network type>; <network name>;  <device id>; <device count>;  <ba
 #		fc;		fcn5;		0;		1;		1024;		2;		60000;		0.05
 #		fc;		fcn5;		0;		1;		512;	   	2;		60000;		0.05
 #		fc;		fcn5;		0;		1;		342;	   	2;		60000;		0.05
-		cnn;		alexnet;	0;		1;		1024;		2;		50000;		0.01
-		cnn;		alexnet;	-1;		20;		1024;		2;		50000;		0.01
+#		cnn;		alexnet;	0;		1;		1024;		2;		50000;		0.01
+#		cnn;		alexnet;	-1;		20;		1024;		2;		50000;		0.01
 #		cnn;		alexnet;	0;		1;		512;  	 	2;		50000;		0.01
 #		cnn;		alexnet;	0;		1;		256;	   	2;		50000;		0.01
 #		cnn;		alexnet;	0;		1;		128;	   	2;		50000;		0.01
 #		cnn;		alexnet;	0;		1;		86;   		2;		50000;		0.01
-		cnn;		resnet;		0;		1;		128;		2;		50000;		0.01
-		cnn;		resnet;		-1;		20;		128;		2;		50000;		0.01
+#		cnn;		resnet;		0;		1;		128;		2;		50000;		0.01
+#		cnn;		resnet;		-1;		20;		128;		2;		50000;		0.01
 #		cnn;		resnet;		0;		1;		64;		2;		50000;		0.01
 #		cnn;		resnet;		0;		1;		32;		2;		50000;		0.01
 #		cnn;		resnet;		0;		1;		16;		2;		50000;		0.01
 #		cnn;		resnet;		0;		1;		11;		2;		50000;		0.01
-		rnn;		lstm;		0;		1;		1024;		2;		-1;		0.01
+#		rnn;		lstm;		0;		1;		1024;		2;		-1;		0.01
 #		rnn;		lstm;		0;		1;		512;   		2;		-1;		0.01
 #		rnn;		lstm;		0;		1;		256;   		2;		-1;		0.01
 #		rnn;		lstm;		0;		1;		128;   		2;		-1;		0.01
